--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="preload" href="/_expo/static/css/Calendar-c7e7d4126fc9492c3f6321c3cb509abe.css" as="style"><link rel="stylesheet" href="/_expo/static/css/Calendar-c7e7d4126fc9492c3f6321c3cb509abe.css"><link rel="icon" href="/favicon.ico" /></head>
+  <link rel="icon" href="/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-11684508abcaa0bc9883799ad6a36fdf.js" defer></script>
+  <script src="/_expo/static/js/web/index-517a0f28b1fb44e3bea8538a33c7c9cd.js" defer></script>
 </body>
 </html>
